# glog

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  gunicorn.conf.py  pyproject.toml  requirements.txt  run.sh  setup.cfg
blog/feed/: apps.py  urls.py
blog/post/: admin.py  models.py  urls.py  views.py
blog/post/migrations/: 0001_initial.py  0002_post_views_alter_image_origin_filename_and_more.py
blog/templates/post/: detail.html
blog/user/: admin.py  apps.py  models.py
blog/user/migrations/: 0001_initial.py
config/: urls.py
config/settings/: base.py  local.py  production.py
nginx/: Dockerfile  nginx.conf
