[tool.poetry]
name = "glog"
version = "0.1.0"
description = "django blog"
authors = ["Yeonggwang Yang"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0"
django-debug-toolbar = "^3.2.2"
django-dotenv = "^1.4.2"
Pillow = "^8.4.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
isort = "^5.10.1"
black = "^21.12b0"
coverage = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
